analizador_semantico/output/y.output
Grammar

    0 $accept: programa $end

    1 programa: MAIN bloque

    2 @1: /* empty */

    3 bloque: INICIOBLOQUE @1 declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE

    4 @2: /* empty */

    5 declar_de_variables_locales: INI_DECLAR_VAR @2 variables_locales FIN_DECLAR_VAR
    6                            | /* empty */

    7 declar_de_subprogs: declar_de_subprogs declar_subprog
    8                   | /* empty */

    9 @3: /* empty */

   10 declar_subprog: cabecera_subprograma @3 bloque

   11 variables_locales: variables_locales cuerpo_declar_variables
   12                  | cuerpo_declar_variables

   13 @4: /* empty */

   14 cuerpo_declar_variables: DECLAR ID @4 mas_variables PYC
   15                        | DECLAR ID error
   16                        | DECLAR error
   17                        | error

   18 mas_variables: mas_variables COMA ID
   19              | /* empty */

   20 @5: /* empty */

   21 cabecera_subprograma: DECLAR ID @5 PARIZQ declaraciones_id PARDER

   22 declaraciones_id: declaraciones_id COMA param
   23                 | param
   24                 | declaraciones_id COMA error
   25                 | /* empty */

   26 param: DECLAR ID

   27 sentencias: sentencias sentencia
   28           | /* empty */

   29 sentencia: bloque
   30          | sentencia_asignacion
   31          | sentencia_if
   32          | sentencia_for_pascal
   33          | sentencia_while
   34          | sentencia_entrada
   35          | sentencia_salida
   36          | sentencia_return
   37          | sentencia_adelante_atras
   38          | sentencia_principio_lista

   39 sentencia_asignacion: ID OP_ASIGNACION expresion PYC
   40                     | error

   41 sentencia_if: SI PARIZQ expresion PARDER THEN sentencia
   42             | SI PARIZQ expresion PARDER THEN sentencia ELSE sentencia

   43 asignacion_for_pascal: ID OP_ASIGNACION expresion
   44                      | DECLAR ID OP_ASIGNACION expresion
   45                      | error

   46 sentencia_for_pascal: FOR asignacion_for_pascal TO valor DO sentencia

   47 valor: CONST_INT
   48      | ID

   49 sentencia_while: MIENTRAS PARIZQ expresion PARDER sentencia

   50 sentencia_entrada: METERDATOS lista_variables PYC

   51 lista_variables: lista_variables COMA ID
   52                | ID
   53                | error

   54 sentencia_salida: SACARDATOS lista_expresiones_o_cadena PYC

   55 lista_expresiones_o_cadena: lista_expresiones_o_cadena COMA expr_cad
   56                           | expr_cad

   57 expr_cad: expresion
   58         | CADENA

   59 @6: /* empty */

   60 sentencia_return: RETURN expresion @6 PYC

   61 expresion: PARIZQ expresion PARDER
   62          | MASMAS expresion
   63          | MENOSMENOS expresion
   64          | expresion MASMAS
   65          | expresion MENOSMENOS
   66          | OP_LIST_UN expresion
   67          | MAS_MENOS expresion
   68          | NEGACION expresion
   69          | OP_AND_LIST expresion
   70          | expresion ARRARR expresion
   71          | expresion MAS_MENOS expresion
   72          | expresion OP_LIST_MUL expresion
   73          | expresion OP_OR_LOG expresion
   74          | expresion OP_AND_LOG expresion
   75          | expresion OP_EQ_NEQ expresion
   76          | expresion OP_REL expresion
   77          | expresion OP_MUL expresion
   78          | expresion MENOSMENOS expresion
   79          | expresion MASMAS expresion ARROBA expresion
   80          | ID
   81          | constante
   82          | funcion
   83          | agregado

   84 sentencia_adelante_atras: ID SENT_LIST PYC

   85 sentencia_principio_lista: DOLAR ID PYC

   86 constante: CONST_INT
   87          | CONST_FLOAT
   88          | CONST_BOOL
   89          | CONST_CHAR

   90 agregado: CORIZQ constante_lista CORDER

   91 constante_lista: constante_lista_int
   92                | constante_lista_float
   93                | constante_lista_bool
   94                | constante_lista_char

   95 constante_lista_int: constante_lista_int COMA CONST_INT
   96                    | CONST_INT

   97 constante_lista_float: constante_lista_float COMA CONST_FLOAT
   98                      | CONST_FLOAT

   99 constante_lista_bool: constante_lista_bool COMA CONST_BOOL
  100                     | CONST_BOOL

  101 constante_lista_char: constante_lista_char COMA CONST_CHAR
  102                     | CONST_CHAR

  103 funcion: cabecera_funcion argumentos_funcion

  104 cabecera_funcion: ID PARIZQ

  105 argumentos_funcion: lista_expresiones_o_cadena PARDER


Terminals, with rules where they appear

$end (0) 0
error (256) 15 16 17 24 40 45 53
OP_ASIGNACION (258) 39 43 44
ID (259) 14 15 18 21 26 39 43 44 48 51 52 80 84 85 104
CONST_INT (260) 47 86 95 96
CONST_FLOAT (261) 87 97 98
CONST_CHAR (262) 89 101 102
CONST_BOOL (263) 88 99 100
DECLAR (264) 14 15 16 21 26 44
PARDER (265) 21 41 42 49 61 105
PARIZQ (266) 21 41 42 49 61 104
METERDATOS (267) 50
MIENTRAS (268) 49
SI (269) 41 42
SACARDATOS (270) 54
FOR (271) 46
INICIOBLOQUE (272) 3
FINBLOQUE (273) 3
PYC (274) 14 39 50 54 60 84 85
TO (275) 46
CORIZQ (276) 90
CORDER (277) 90
COMA (278) 18 22 24 51 55 95 97 99 101
MAIN (279) 1
RETURN (280) 60
INI_DECLAR_VAR (281) 5
FIN_DECLAR_VAR (282) 5
DO (283) 46
SENT_LIST (284) 84
DOLAR (285) 85
CADENA (286) 58
ARRARR (287) 70
OP_OR_LOG (288) 73
OP_AND_LOG (289) 74
OP_EQ_NEQ (290) 75
OP_REL (291) 76
MASMAS (292) 62 64 79
MENOSMENOS (293) 63 65 78
MAS_MENOS (294) 67 71
OP_LIST_MUL (295) 72
OP_MUL (296) 77
OP_AND_LIST (297) 69
OP_LIST_UN (298) 66
NEGACION (299) 68
ARROBA (300) 79
ELSE (301) 42
THEN (302) 41 42


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
programa (49)
    on left: 1, on right: 0
bloque (50)
    on left: 3, on right: 1 10 29
@1 (51)
    on left: 2, on right: 3
declar_de_variables_locales (52)
    on left: 5 6, on right: 3
@2 (53)
    on left: 4, on right: 5
declar_de_subprogs (54)
    on left: 7 8, on right: 3 7
declar_subprog (55)
    on left: 10, on right: 7
@3 (56)
    on left: 9, on right: 10
variables_locales (57)
    on left: 11 12, on right: 5 11
cuerpo_declar_variables (58)
    on left: 14 15 16 17, on right: 11 12
@4 (59)
    on left: 13, on right: 14
mas_variables (60)
    on left: 18 19, on right: 14 18
cabecera_subprograma (61)
    on left: 21, on right: 10
@5 (62)
    on left: 20, on right: 21
declaraciones_id (63)
    on left: 22 23 24 25, on right: 21 22 24
param (64)
    on left: 26, on right: 22 23
sentencias (65)
    on left: 27 28, on right: 3 27
sentencia (66)
    on left: 29 30 31 32 33 34 35 36 37 38, on right: 27 41 42 46 49
sentencia_asignacion (67)
    on left: 39 40, on right: 30
sentencia_if (68)
    on left: 41 42, on right: 31
asignacion_for_pascal (69)
    on left: 43 44 45, on right: 46
sentencia_for_pascal (70)
    on left: 46, on right: 32
valor (71)
    on left: 47 48, on right: 46
sentencia_while (72)
    on left: 49, on right: 33
sentencia_entrada (73)
    on left: 50, on right: 34
lista_variables (74)
    on left: 51 52 53, on right: 50 51
sentencia_salida (75)
    on left: 54, on right: 35
lista_expresiones_o_cadena (76)
    on left: 55 56, on right: 54 55 105
expr_cad (77)
    on left: 57 58, on right: 55 56
sentencia_return (78)
    on left: 60, on right: 36
@6 (79)
    on left: 59, on right: 60
expresion (80)
    on left: 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
    79 80 81 82 83, on right: 39 41 42 43 44 49 57 60 61 62 63 64 65
    66 67 68 69 70 71 72 73 74 75 76 77 78 79
sentencia_adelante_atras (81)
    on left: 84, on right: 37
sentencia_principio_lista (82)
    on left: 85, on right: 38
constante (83)
    on left: 86 87 88 89, on right: 81
agregado (84)
    on left: 90, on right: 83
constante_lista (85)
    on left: 91 92 93 94, on right: 90
constante_lista_int (86)
    on left: 95 96, on right: 91 95
constante_lista_float (87)
    on left: 97 98, on right: 92 97
constante_lista_bool (88)
    on left: 99 100, on right: 93 99
constante_lista_char (89)
    on left: 101 102, on right: 94 101
funcion (90)
    on left: 103, on right: 82
cabecera_funcion (91)
    on left: 104, on right: 103
argumentos_funcion (92)
    on left: 105, on right: 103


state 0

    0 $accept: . programa $end

    MAIN  shift, and go to state 1

    programa  go to state 2


state 1

    1 programa: MAIN . bloque

    INICIOBLOQUE  shift, and go to state 3

    bloque  go to state 4


state 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


state 3

    3 bloque: INICIOBLOQUE . @1 declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE

    $default  reduce using rule 2 (@1)

    @1  go to state 6


state 4

    1 programa: MAIN bloque .

    $default  reduce using rule 1 (programa)


state 5

    0 $accept: programa $end .

    $default  accept


state 6

    3 bloque: INICIOBLOQUE @1 . declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE

    INI_DECLAR_VAR  shift, and go to state 7

    $default  reduce using rule 6 (declar_de_variables_locales)

    declar_de_variables_locales  go to state 8


state 7

    5 declar_de_variables_locales: INI_DECLAR_VAR . @2 variables_locales FIN_DECLAR_VAR

    $default  reduce using rule 4 (@2)

    @2  go to state 9


state 8

    3 bloque: INICIOBLOQUE @1 declar_de_variables_locales . declar_de_subprogs sentencias FINBLOQUE

    $default  reduce using rule 8 (declar_de_subprogs)

    declar_de_subprogs  go to state 10


state 9

    5 declar_de_variables_locales: INI_DECLAR_VAR @2 . variables_locales FIN_DECLAR_VAR

    error   shift, and go to state 11
    DECLAR  shift, and go to state 12

    variables_locales        go to state 13
    cuerpo_declar_variables  go to state 14


state 10

    3 bloque: INICIOBLOQUE @1 declar_de_variables_locales declar_de_subprogs . sentencias FINBLOQUE
    7 declar_de_subprogs: declar_de_subprogs . declar_subprog

    DECLAR  shift, and go to state 15

    $default  reduce using rule 28 (sentencias)

    declar_subprog        go to state 16
    cabecera_subprograma  go to state 17
    sentencias            go to state 18


state 11

   17 cuerpo_declar_variables: error .

    $default  reduce using rule 17 (cuerpo_declar_variables)


state 12

   14 cuerpo_declar_variables: DECLAR . ID @4 mas_variables PYC
   15                        | DECLAR . ID error
   16                        | DECLAR . error

    error  shift, and go to state 19
    ID     shift, and go to state 20


state 13

    5 declar_de_variables_locales: INI_DECLAR_VAR @2 variables_locales . FIN_DECLAR_VAR
   11 variables_locales: variables_locales . cuerpo_declar_variables

    error           shift, and go to state 11
    DECLAR          shift, and go to state 12
    FIN_DECLAR_VAR  shift, and go to state 21

    cuerpo_declar_variables  go to state 22


state 14

   12 variables_locales: cuerpo_declar_variables .

    $default  reduce using rule 12 (variables_locales)


state 15

   21 cabecera_subprograma: DECLAR . ID @5 PARIZQ declaraciones_id PARDER

    ID  shift, and go to state 23


state 16

    7 declar_de_subprogs: declar_de_subprogs declar_subprog .

    $default  reduce using rule 7 (declar_de_subprogs)


state 17

   10 declar_subprog: cabecera_subprograma . @3 bloque

    $default  reduce using rule 9 (@3)

    @3  go to state 24


state 18

    3 bloque: INICIOBLOQUE @1 declar_de_variables_locales declar_de_subprogs sentencias . FINBLOQUE
   27 sentencias: sentencias . sentencia

    error         shift, and go to state 25
    ID            shift, and go to state 26
    METERDATOS    shift, and go to state 27
    MIENTRAS      shift, and go to state 28
    SI            shift, and go to state 29
    SACARDATOS    shift, and go to state 30
    FOR           shift, and go to state 31
    INICIOBLOQUE  shift, and go to state 3
    FINBLOQUE     shift, and go to state 32
    RETURN        shift, and go to state 33
    DOLAR         shift, and go to state 34

    bloque                     go to state 35
    sentencia                  go to state 36
    sentencia_asignacion       go to state 37
    sentencia_if               go to state 38
    sentencia_for_pascal       go to state 39
    sentencia_while            go to state 40
    sentencia_entrada          go to state 41
    sentencia_salida           go to state 42
    sentencia_return           go to state 43
    sentencia_adelante_atras   go to state 44
    sentencia_principio_lista  go to state 45


state 19

   16 cuerpo_declar_variables: DECLAR error .

    $default  reduce using rule 16 (cuerpo_declar_variables)


state 20

   14 cuerpo_declar_variables: DECLAR ID . @4 mas_variables PYC
   15                        | DECLAR ID . error

    error  shift, and go to state 46

    PYC   reduce using rule 13 (@4)
    COMA  reduce using rule 13 (@4)

    @4  go to state 47


state 21

    5 declar_de_variables_locales: INI_DECLAR_VAR @2 variables_locales FIN_DECLAR_VAR .

    $default  reduce using rule 5 (declar_de_variables_locales)


state 22

   11 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce using rule 11 (variables_locales)


state 23

   21 cabecera_subprograma: DECLAR ID . @5 PARIZQ declaraciones_id PARDER

    $default  reduce using rule 20 (@5)

    @5  go to state 48


state 24

   10 declar_subprog: cabecera_subprograma @3 . bloque

    INICIOBLOQUE  shift, and go to state 3

    bloque  go to state 49


state 25

   40 sentencia_asignacion: error .

    $default  reduce using rule 40 (sentencia_asignacion)


state 26

   39 sentencia_asignacion: ID . OP_ASIGNACION expresion PYC
   84 sentencia_adelante_atras: ID . SENT_LIST PYC

    OP_ASIGNACION  shift, and go to state 50
    SENT_LIST      shift, and go to state 51


state 27

   50 sentencia_entrada: METERDATOS . lista_variables PYC

    error  shift, and go to state 52
    ID     shift, and go to state 53

    lista_variables  go to state 54


state 28

   49 sentencia_while: MIENTRAS . PARIZQ expresion PARDER sentencia

    PARIZQ  shift, and go to state 55


state 29

   41 sentencia_if: SI . PARIZQ expresion PARDER THEN sentencia
   42             | SI . PARIZQ expresion PARDER THEN sentencia ELSE sentencia

    PARIZQ  shift, and go to state 56


state 30

   54 sentencia_salida: SACARDATOS . lista_expresiones_o_cadena PYC

    ID           shift, and go to state 57
    CONST_INT    shift, and go to state 58
    CONST_FLOAT  shift, and go to state 59
    CONST_CHAR   shift, and go to state 60
    CONST_BOOL   shift, and go to state 61
    PARIZQ       shift, and go to state 62
    CORIZQ       shift, and go to state 63
    CADENA       shift, and go to state 64
    MASMAS       shift, and go to state 65
    MENOSMENOS   shift, and go to state 66
    MAS_MENOS    shift, and go to state 67
    OP_AND_LIST  shift, and go to state 68
    OP_LIST_UN   shift, and go to state 69
    NEGACION     shift, and go to state 70

    lista_expresiones_o_cadena  go to state 71
    expr_cad                    go to state 72
    expresion                   go to state 73
    constante                   go to state 74
    agregado                    go to state 75
    funcion                     go to state 76
    cabecera_funcion            go to state 77


state 31

   46 sentencia_for_pascal: FOR . asignacion_for_pascal TO valor DO sentencia

    error   shift, and go to state 78
    ID      shift, and go to state 79
    DECLAR  shift, and go to state 80

    asignacion_for_pascal  go to state 81


state 32

    3 bloque: INICIOBLOQUE @1 declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE .

    $default  reduce using rule 3 (bloque)


state 33

   60 sentencia_return: RETURN . expresion @6 PYC

    ID           shift, and go to state 57
    CONST_INT    shift, and go to state 58
    CONST_FLOAT  shift, and go to state 59
    CONST_CHAR   shift, and go to state 60
    CONST_BOOL   shift, and go to state 61
    PARIZQ       shift, and go to state 62
    CORIZQ       shift, and go to state 63
    MASMAS       shift, and go to state 65
    MENOSMENOS   shift, and go to state 66
    MAS_MENOS    shift, and go to state 67
    OP_AND_LIST  shift, and go to state 68
    OP_LIST_UN   shift, and go to state 69
    NEGACION     shift, and go to state 70

    expresion         go to state 82
    constante         go to state 74
    agregado          go to state 75
    funcion           go to state 76
    cabecera_funcion  go to state 77


state 34

   85 sentencia_principio_lista: DOLAR . ID PYC

    ID  shift, and go to state 83


state 35

   29 sentencia: bloque .

    $default  reduce using rule 29 (sentencia)


state 36

   27 sentencias: sentencias sentencia .

    $default  reduce using rule 27 (sentencias)


state 37

   30 sentencia: sentencia_asignacion .

    $default  reduce using rule 30 (sentencia)


state 38

   31 sentencia: sentencia_if .

    $default  reduce using rule 31 (sentencia)


state 39

   32 sentencia: sentencia_for_pascal .

    $default  reduce using rule 32 (sentencia)


state 40

   33 sentencia: sentencia_while .

    $default  reduce using rule 33 (sentencia)


state 41

   34 sentencia: sentencia_entrada .

    $default  reduce using rule 34 (sentencia)


state 42

   35 sentencia: sentencia_salida .

    $default  reduce using rule 35 (sentencia)


state 43

   36 sentencia: sentencia_return .

    $default  reduce using rule 36 (sentencia)


state 44

   37 sentencia: sentencia_adelante_atras .

    $default  reduce using rule 37 (sentencia)


state 45

   38 sentencia: sentencia_principio_lista .

    $default  reduce using rule 38 (sentencia)


state 46

   15 cuerpo_declar_variables: DECLAR ID error .

    $default  reduce using rule 15 (cuerpo_declar_variables)


state 47

   14 cuerpo_declar_variables: DECLAR ID @4 . mas_variables PYC

    $default  reduce using rule 19 (mas_variables)

    mas_variables  go to state 84


state 48

   21 cabecera_subprograma: DECLAR ID @5 . PARIZQ declaraciones_id PARDER

    PARIZQ  shift, and go to state 85


state 49

   10 declar_subprog: cabecera_subprograma @3 bloque .

    $default  reduce using rule 10 (declar_subprog)


state 50

   39 sentencia_asignacion: ID OP_ASIGNACION . expresion PYC

    ID           shift, and go to state 57
    CONST_INT    shift, and go to state 58
    CONST_FLOAT  shift, and go to state 59
    CONST_CHAR   shift, and go to state 60
    CONST_BOOL   shift, and go to state 61
    PARIZQ       shift, and go to state 62
    CORIZQ       shift, and go to state 63
    MASMAS       shift, and go to state 65
    MENOSMENOS   shift, and go to state 66
    MAS_MENOS    shift, and go to state 67
    OP_AND_LIST  shift, and go to state 68
    OP_LIST_UN   shift, and go to state 69
    NEGACION     shift, and go to state 70

    expresion         go to state 86
    constante         go to state 74
    agregado          go to state 75
    funcion           go to state 76
    cabecera_funcion  go to state 77


state 51

   84 sentencia_adelante_atras: ID SENT_LIST . PYC

    PYC  shift, and go to state 87


state 52

   53 lista_variables: error .

    $default  reduce using rule 53 (lista_variables)


state 53

   52 lista_variables: ID .

    $default  reduce using rule 52 (lista_variables)


state 54

   50 sentencia_entrada: METERDATOS lista_variables . PYC
   51 lista_variables: lista_variables . COMA ID

    PYC   shift, and go to state 88
    COMA  shift, and go to state 89


state 55

   49 sentencia_while: MIENTRAS PARIZQ . expresion PARDER sentencia

    ID           shift, and go to state 57
    CONST_INT    shift, and go to state 58
    CONST_FLOAT  shift, and go to state 59
    CONST_CHAR   shift, and go to state 60
    CONST_BOOL   shift, and go to state 61
    PARIZQ       shift, and go to state 62
    CORIZQ       shift, and go to state 63
    MASMAS       shift, and go to state 65
    MENOSMENOS   shift, and go to state 66
    MAS_MENOS    shift, and go to state 67
    OP_AND_LIST  shift, and go to state 68
    OP_LIST_UN   shift, and go to state 69
    NEGACION     shift, and go to state 70

    expresion         go to state 90
    constante         go to state 74
    agregado          go to state 75
    funcion           go to state 76
    cabecera_funcion  go to state 77


state 56

   41 sentencia_if: SI PARIZQ . expresion PARDER THEN sentencia
   42             | SI PARIZQ . expresion PARDER THEN sentencia ELSE sentencia

    ID           shift, and go to state 57
    CONST_INT    shift, and go to state 58
    CONST_FLOAT  shift, and go to state 59
    CONST_CHAR   shift, and go to state 60
    CONST_BOOL   shift, and go to state 61
    PARIZQ       shift, and go to state 62
    CORIZQ       shift, and go to state 63
    MASMAS       shift, and go to state 65
    MENOSMENOS   shift, and go to state 66
    MAS_MENOS    shift, and go to state 67
    OP_AND_LIST  shift, and go to state 68
    OP_LIST_UN   shift, and go to state 69
    NEGACION     shift, and go to state 70

    expresion         go to state 91
    constante         go to state 74
    agregado          go to state 75
    funcion           go to state 76
    cabecera_funcion  go to state 77


state 57

   80 expresion: ID .
  104 cabecera_funcion: ID . PARIZQ

    PARIZQ  shift, and go to state 92

    $default  reduce using rule 80 (expresion)


state 58

   86 constante: CONST_INT .

    $default  reduce using rule 86 (constante)


state 59

   87 constante: CONST_FLOAT .

    $default  reduce using rule 87 (constante)


state 60

   89 constante: CONST_CHAR .

    $default  reduce using rule 89 (constante)


state 61

   88 constante: CONST_BOOL .

    $default  reduce using rule 88 (constante)


state 62

   61 expresion: PARIZQ . expresion PARDER

    ID           shift, and go to state 57
    CONST_INT    shift, and go to state 58
    CONST_FLOAT  shift, and go to state 59
    CONST_CHAR   shift, and go to state 60
    CONST_BOOL   shift, and go to state 61
    PARIZQ       shift, and go to state 62
    CORIZQ       shift, and go to state 63
    MASMAS       shift, and go to state 65
    MENOSMENOS   shift, and go to state 66
    MAS_MENOS    shift, and go to state 67
    OP_AND_LIST  shift, and go to state 68
    OP_LIST_UN   shift, and go to state 69
    NEGACION     shift, and go to state 70

    expresion         go to state 93
    constante         go to state 74
    agregado          go to state 75
    funcion           go to state 76
    cabecera_funcion  go to state 77


state 63

   90 agregado: CORIZQ . constante_lista CORDER

    CONST_INT    shift, and go to state 94
    CONST_FLOAT  shift, and go to state 95
    CONST_CHAR   shift, and go to state 96
    CONST_BOOL   shift, and go to state 97

    constante_lista        go to state 98
    constante_lista_int    go to state 99
    constante_lista_float  go to state 100
    constante_lista_bool   go to state 101
    constante_lista_char   go to state 102


state 64

   58 expr_cad: CADENA .

    $default  reduce using rule 58 (expr_cad)


state 65

   62 expresion: MASMAS . expresion

    ID           shift, and go to state 57
    CONST_INT    shift, and go to state 58
    CONST_FLOAT  shift, and go to state 59
    CONST_CHAR   shift, and go to state 60
    CONST_BOOL   shift, and go to state 61
    PARIZQ       shift, and go to state 62
    CORIZQ       shift, and go to state 63
    MASMAS       shift, and go to state 65
    MENOSMENOS   shift, and go to state 66
    MAS_MENOS    shift, and go to state 67
    OP_AND_LIST  shift, and go to state 68
    OP_LIST_UN   shift, and go to state 69
    NEGACION     shift, and go to state 70

    expresion         go to state 103
    constante         go to state 74
    agregado          go to state 75
    funcion           go to state 76
    cabecera_funcion  go to state 77


state 66

   63 expresion: MENOSMENOS . expresion

    ID           shift, and go to state 57
    CONST_INT    shift, and go to state 58
    CONST_FLOAT  shift, and go to state 59
    CONST_CHAR   shift, and go to state 60
    CONST_BOOL   shift, and go to state 61
    PARIZQ       shift, and go to state 62
    CORIZQ       shift, and go to state 63
    MASMAS       shift, and go to state 65
    MENOSMENOS   shift, and go to state 66
    MAS_MENOS    shift, and go to state 67
    OP_AND_LIST  shift, and go to state 68
    OP_LIST_UN   shift, and go to state 69
    NEGACION     shift, and go to state 70

    expresion         go to state 104
    constante         go to state 74
    agregado          go to state 75
    funcion           go to state 76
    cabecera_funcion  go to state 77


state 67

   67 expresion: MAS_MENOS . expresion

    ID           shift, and go to state 57
    CONST_INT    shift, and go to state 58
    CONST_FLOAT  shift, and go to state 59
    CONST_CHAR   shift, and go to state 60
    CONST_BOOL   shift, and go to state 61
    PARIZQ       shift, and go to state 62
    CORIZQ       shift, and go to state 63
    MASMAS       shift, and go to state 65
    MENOSMENOS   shift, and go to state 66
    MAS_MENOS    shift, and go to state 67
    OP_AND_LIST  shift, and go to state 68
    OP_LIST_UN   shift, and go to state 69
    NEGACION     shift, and go to state 70
